    OPENMP_ENABLED boolean flag which indicates if openmp was used in
    compilation.  (Issue #530)
  * analysis.helanal.helanal_trajectory() and helanal_main() now use a
    logger at level INFO to output all their computed values instead
    of printing to stdout
  * default offset for ProgressMeter was changed from 0 to 1 (to match
    the change from 1- to 0-based ts.frame counting)

Fixes

  * AtomGroup timesteps no longer cached (Issue #606)
  * GROWriter now truncates atom numbers over 99999 (Issue #550)
  * AMBER netcdf writer now correctly uses float32 precision (Issue #518)
  * Fixed a numpy incompatibility in `analysis.leaflet.LeafletFinder`.
    (Issue #533)
  * Cleaned up `MDAnalysis.Writer` docs regarding `dt` usage. (Issue #522)
  * Fixed setup-time dependency on numpy that broke pip installs. (Issue #479)
  * Fixed unpickling errors due to lingering dead universes. (Issue #487)
  * Fixed analysis.density modules requiring the defunct `skip` attribute
    on trajectories. (Issue #489)
  * ten2eleven camelcase fixer now deals with centerOfMass (Issue #470)
  * ten2eleven will now convert numatoms to n_atoms argument
    for writer() functions (Issue #470)
  * Fixed non-compliant Amber NCDFWriter (Issue #488)
  * Fixed many Timestep methods failing when positions weren't present
    (Issue #512)
  * Fixed PointSelection using KDTree (Issue #362)
  * Fixed GROParser getting tripped up by some file (Issue #548)
  * Fixed writing dx files from analysis.density.density_from_Universe()
    (Issue #544 and #410)
  * Fixed base.Reader._check_slice_indices not liking numpy ints
    (Issue #604)
  * Fixed broken analysis.helanal.helanal_trajectory() and
    helanal_main()
  * Fixed lib.util.greedy_splitext() (now returns full path)

10/08/15

  * 0.12.1 kain88-de, orbeckst, richardjgowers

API Changes

Enhancements

Changes

Fixes
  * Fixed OpenMP detection on Linux/OSX #459
  * Fixed reading of LAMMPS trajectory times: default unit ought